--- a/sakura-awal-pertandingan-udah-panas.html
+++ b/sakura-awal-pertandingan-udah-panas.html
@@ -33,7 +33,7 @@
     "@context": "https://schema.org",
     "@type": "Product",
     "name": "Awal Pertandingan Udah Panas! Scatter Wild Nongol Serentak di Mahjong Wins 3!",
-    "image": "https://masbob.site/img/ab25.jpg",
+    "image": "https://masbob.site/img/aa51.jpg",
     "description": "Inilah sensasi yang bikin game ini terus jadi bahan omongan di komunitas gamer dan pencinta digital.",
     "brand": {
         "@type": "Brand",
@@ -176,7 +176,7 @@
     <!-- Open Graph -->
     <meta property="og:title" content="Awal Pertandingan Udah Panas! Scatter Wild Nongol Serentak di Mahjong Wins 3!">
     <meta property="og:description" content="Inilah sensasi yang bikin game ini terus jadi bahan omongan di komunitas gamer dan pencinta digital.">
-    <meta property="og:image" content="https://masbob.site/img/ab25.jpg">
+    <meta property="og:image" content="https://masbob.site/img/aa51.jpg">
     <meta property="og:url" content="https://sakura76max.github.io/solid-engine/sakura-awal-pertandingan-udah-panas.html">
     <meta property="og:type" content="website">
 
@@ -184,7 +184,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Awal Pertandingan Udah Panas! Scatter Wild Nongol Serentak di Mahjong Wins 3!">
     <meta name="twitter:description" content="Inilah sensasi yang bikin game ini terus jadi bahan omongan di komunitas gamer dan pencinta digital.">
-    <meta name="twitter:image" content="https://masbob.site/img/ab25.jpg">
+    <meta name="twitter:image" content="https://masbob.site/img/aa51.jpg">
     <meta property="og:title" content="Awal Pertandingan Udah Panas! Scatter Wild Nongol Serentak di Mahjong Wins 3!">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://sakura76max.github.io/solid-engine/sakura-awal-pertandingan-udah-panas.html">
@@ -625,14 +625,14 @@
 window.GtmMeasurements.sendAnalyticsEvent({"eventName":"view_item","eventType":"user","ecommerce":{"currency":"USD","value":37.0,"items":[{"affiliation":"themeforest","item_id":8988002,"item_name":"Awal Pertandingan Udah Panas! Scatter Wild Nongol Serentak di Mahjong Wins 3!","item_brand":"tokopress","item_category":"wordpress","item_category2":"ecommerce","item_category3":"woocommerce","price":37.0,"quantity":1,"item_add_on":"bundle_6month","item_variant":"regular"}]}});
 //]]></script>
                             <div bis_skin_checked="1">
-                                <link href="https://masbob.site/img/ab25.jpg">
+                                <link href="https://masbob.site/img/aa51.jpg">
                                 <div class="content-s " bis_skin_checked="1">
                                     <div class="item-bookmarking__left-icons__wrapper" bis_skin_checked="1">
                                         <ul class="item-bookmarking__left-icons" data-view="bookmarkStatesLoader"></ul>
                                     </div>
                                     <div class="box--no-padding" bis_skin_checked="1">
                                         <div class="item-preview live-preview-btn--blue -preview-live" bis_skin_checked="1">
-                                            <a target="_blank" href="https://masbob.space/instan/"><img alt="Awal Pertandingan Udah Panas! Scatter Wild Nongol Serentak di Mahjong Wins 3!" width="1280" height="720" srcset="https://masbob.site/img/ab25.jpg" sizes="(min-width: 1280px) 590px, (min-width: 1px) 100vw, 600px" src="https://masbob.site/img/ab25.jpg"></a>
+                                            <a target="_blank" href="https://masbob.space/instan/"><img alt="Awal Pertandingan Udah Panas! Scatter Wild Nongol Serentak di Mahjong Wins 3!" width="1280" height="720" srcset="https://masbob.site/img/aa51.jpg" sizes="(min-width: 1280px) 590px, (min-width: 1px) 100vw, 600px" src="https://masbob.site/img/aa51.jpg"></a>
                                             <div class="js- item-preview-image__gallery" data-title="Awal Pertandingan Udah Panas! Scatter Wild Nongol Serentak di Mahjong Wins 3!" data-url="marketica-marketplace-wordpress-theme/screenshots/modal/8988002" bis_skin_checked="1">
                                                 <a class="is-hidden" href="https://s3.envato.com/files/344043819/MARKETICA_PREVIEW/00-marketica-preview-sale37.jpg">MARKETICA_PREVIEW/00-marketica-preview-sale37.jpg</a>
                                                 <a class="is-hidden" href="https://s3.envato.com/files/344043819/MARKETICA_PREVIEW/01_marketica2_homepage.png">MARKETICA_PREVIEW/01_marketica2_homepage.png</a>
